k8s/00_rbac.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: whdc
