k8s/25-nginx-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: svc-whdc-frontend
  namespace: whdc
  labels:
    app: whdc-nginx
    component: wdv-nginx
spec:
  selector:
    app: whdc-nginx
  ports:
      - port: 80
        protocol: TCP
        targetPort: 80
